# autogen-demo

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
backend/agents/: base_agent.py  critic_agent.py  research_agent.py  user_proxy.py
backend/evidence/: __init__.py  comparison.py  metrics.py  models.py  store.py
backend/prompts/: critic.yaml  researcher.yaml  researcher_deepdive.yaml  researcher_landscape.yaml  synthesizer.yaml
backend/tools/: arxiv_search.py  evidence_hooks.py  openalex_search.py  pdf_parser.py  pdf_rag.py
backend/utils/: file_io.py  logger.py
backend/workflows/: gatekeeper.py  topic_generation.py
config/: llm_config.py
data/vector_db/: chroma.sqlite3
