[project]
name = "autogen-demo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "autogen>=0.11.4",
    "chromadb>=1.5.5",
    "fastapi>=0.135.2",
    "feedparser>=6.0.12",
    "langchain-text-splitters>=1.1.1",
    "loguru>=0.7.3",
    "openai>=2.30.0",
    "pyautogen>=0.10.0",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "streamlit>=1.56.0",
    "uvicorn>=0.42.0",
]
